--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<img src="./main.jpg" alt="Planets" x="0" y="0" width="521" height="739" usemap="#planetmap" />
+<img src="./main.jpg" alt="Planets" x="0" y="0" width="device-width" height="device-width*1.418" usemap="#planetmap" />
 
 <map name="planetmap" id="planetmap">
   <area href="./article1.html" shape="rectangle" coords="265,0,521,106"> </a>
