--- a/index.html
+++ b/index.html
@@ -6,16 +6,9 @@
 <body>
 
 
-<img src="./main.jpg" alt="Planets" x="0" y="0" width=100% usemap="#planetmap" />
+<img src="./main.jpg" alt="Planets" x="0" y="0" width=100%/>
 
-<map name="planetmap" id="planetmap">
-  <area href="./article1.html" shape="rectangle" coords="265,0,521,106"> </a>
-  <area href="./article2.html" shape="rectangle" coords="0,106,355,446"> </a>
-  <area href="./article3.html" shape="rectangle" coords="356,107,520,544"> </a>
-  <area href="./article4.html" shape="rectangle" coords="0,447,356,544"> </a>
-  <area href="./article5.html" shape="rectangle" coords="0,546,120,738"> </a>
-  <area href="./article6.html" shape="rectangle" coords="121,546,521,739"> </a>
-</map>
+
 
 </body>
 </html>
