--- a/index.html
+++ b/index.html
@@ -5,16 +5,73 @@
 </head>
 <body>
 
-<img src="./main.jpg" alt="Planets" width="521" height="739" usemap="#planetmap"/>
+<img src="./main.jpg" alt="Planets" x="0" y="0" width="100%" heigh="100%" usemap="#planetmap"/>
 
-<map name="planetmap" id="planetmap1">
-  <area href="./article1.html" shape="rectangle" coords="265,0,521,106"> </a>
+<map name="planetmap" id="planetmapid">
+  <area href="./article1.html" shape="rectangle" coords="265,0,520,106"> </a>
   <area href="./article2.html" shape="rectangle" coords="0,106,355,446"> </a>
   <area href="./article3.html" shape="rectangle" coords="356,107,520,544"> </a>
   <area href="./article4.html" shape="rectangle" coords="0,447,356,544"> </a>
   <area href="./article5.html" shape="rectangle" coords="0,546,120,738"> </a>
-  <area href="./article6.html" shape="rectangle" coords="121,546,521,739"> </a>
+  <area href="./article6.html" shape="rectangle" coords="121,546,520,738"> </a>
 </map>
+<script type="text/javascript">
+ 
+        window.onload=function(){
+            adjust();
+        }
+ 
+        var timeout = null;//onresize触发次数过多，设置定时器
+        window.onresize = function () {
+            clearTimeout(timeout);
+            timeout = setTimeout(function () { window.location.reload(); }, 100);//页面大小变化，重新加载页面以刷新MAP
+        }
+ 
+        //获取MAP中元素属性
+        function adjust() {
+            var map = document.getElementById("planetmapid");
+            var element = map.childNodes;
+            var itemNumber = element.length / 2;
+            for (var i = 0; i < itemNumber - 1; i++) {
+                var item = 2 * i + 1;
+                var oldCoords = element[item].coords;
+                var newcoords = adjustPosition(oldCoords);
+                element[item].setAttribute("coords", newcoords);
+            }
+            var test = element;
+        }
+ 
+        //调整MAP中坐标
+        function adjustPosition(position) {
+            var pageWidth = document.body.clientWidth;//获取页面宽度
+            var pageHeith = document.body.clientHeight;//获取页面高度
+            console.log(pageWidth)
+            console.log(pageHeith)
+
+            var imageWidth = 521;  //图片的长宽
+            var imageHeigth = 739;
+ 
+            var each = position.split(",");
+            //获取每个坐标点
+            for (var i = 0; i < each.length; i++) {
+                each[i] = Math.round(parseInt(each[i]) * pageWidth / imageWidth).toString();//x坐标
+
+                i++;
+                each[i] = Math.round(parseInt(each[i]) * pageHeith / imageHeigth).toString();//y坐标
+                
+            }
+            //生成新的坐标点
+            var newPosition = "";
+            for (var i = 0; i < each.length; i++) {
+                newPosition += each[i];
+                if (i < each.length - 1) {
+                    newPosition += ",";
+                }
+            }
+            return newPosition;
+        }
+</script>
+
 
 </body>
 </html>
